# eyeofjupyter

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
eoj_browser/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
eoj_browser/mock/: test.ts
eoj_browser/src/: App.svelte  main.ts
eoj_browser/src/lib/: FileBrowser.svelte  VersionBrowser.svelte  model.ts
eyeofjupyter/: __main__.py  commandline.py  config.py  errors.py  fs_format.py  key_value_cache.py  snapshot_browser.py
eyeofjupyter/static/: index.html
eyeofjupyter/static/assets/: index-AfJJRMJx.css  index-BFKKhxYv.js  index-BOkwyK3w.css  index-Bue6CbDD.js  index-C6_YRbnj.css  index-CHA-f0Ig.js  index-D5EtSHv1.js  index-Dc2ZwPfd.js  index-KoZ6hKzJ.js  index-OD4JzgO9.js  index-YtWQ0qmQ.js  index-Z4rLdzRZ.js  index-hQKUuaMA.css
eyeofjupyter/templates/: snapshot_listings.html.j2
eyeofjupyter/templates/nbconvert/: report_template.html.j2
