[tool.poetry]
name = "eyeofjupyter"
version = "0.1.0"
description = ""
authors = ["Vamsi Talupula <tanavamsikrishna@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
nbconvert = "^7.11.0"
ipython = "^8.17.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ej = "eyeofjupyter.__main__:main"
