[project]
name = "eyeofjupyter"
version = "0.1.11"
description = ""
authors = [{ name = "Vamsi Talupula", email = "tanavamsikrishna@outlook.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "click>=8.1.7,<9",
    "nbconvert>=7.11.0,<8",
    "flask>=3.0.0,<4",
    "waitress>=2.1.2,<3",
]

[project.scripts]
eoj = "eyeofjupyter.__main__:main"

[dependency-groups]
dev = [
    "ipykernel>=6.26.0,<7",
    "pytest>=7.4.3,<8",
    "ipython>=8.18.0,<9",
    "matplotlib>=3.8.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
